<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:text="@string/app_name2"
        android:textAlignment="center"
        android:textSize="50sp"
        android:textStyle="bold"
        android:textColor="@color/black"/>


    <ImageView
        android:contentDescription="@string/app_name"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:scaleType="centerCrop"
        android:layout_marginBottom="24dp"
        android:background="@color/white"/>
    <EditText
        android:id="@+id/personNameEditText"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/app_personName"
        android:autofillHints="Enter Name"
        android:inputType="textPersonName"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/app_email"
        android:autofillHints="Enter Email Address"
        android:inputType="textEmailAddress"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/app_password"
        android:autofillHints="Enter Password"
        android:inputType="textPassword"
        android:layout_marginBottom="16dp"/>



    <Button
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_register" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Already have an account?"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_marginTop="24dp" />

    <Button
        android:id="@+id/LoginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Login"
        android:background="@android:color/transparent"
        android:textColor="@color/colorPrimary" />
</LinearLayout>
